--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     html.style.fontSize = html.offsetWidth / IPHONE6_SCREEN_WIDTH * DEFAULT_REM + 'px';
   }
 
+
+  //dddd
   init();
 
 </script>
