增加cordova打包策略

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   init();
 </script>
-
+<script type="text/javascript" src="cordova.js"></script>
 <body>
 <app></app>
 <!-- built files will be auto injected -->
