--- a/cordova/www/index.html
+++ b/cordova/www/index.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=Content-Security-Policy content="default-src *; font-src *  data:;img-src data: *; style-src 'self' https://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'"><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><title>长投学堂</title><link href=./static/css/app.0ccfdca0d8a45dffa0228e1709fa8677.css rel=stylesheet></head><script>/**
- * 初始化，设置rem
- */
-function init (){
-  var IPHONE6_SCREEN_WIDTH = 375;
-  var DEFAULT_REM = 20;
-  var html = document.getElementsByTagName('html')[0];
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=Content-Security-Policy content="default-src * 'self' gap://ready file://* * ; font-src *  data:;img-src data: *; style-src 'self' https://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'"><meta name=format-detection content="telephone=no"><meta name=msapplication-tap-highlight content=no><meta name=viewport content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-touch-fullscreen content=yes><title>长投学堂</title><link href=./static/css/app.30741b17d8a82f2ed850b24d6972c3a4.css rel=stylesheet></head><body><div id=appFontTester style="width: 18.75rem;height: 1px"></div><script>/**
+   * 初始化，设置rem
+   */
+  function init (){
+    var IPHONE6_SCREEN_WIDTH = 375;
+    var DEFAULT_REM = 20;
+    var html = document.getElementsByTagName('html')[0];
 
-  html.style.fontSize = html.offsetWidth / IPHONE6_SCREEN_WIDTH * DEFAULT_REM + 'px';
-}
+    // 字体缩放比(1rem = fontScale px)
+    window.fontScale = html.offsetWidth / IPHONE6_SCREEN_WIDTH * DEFAULT_REM
+    html.style.fontSize = window.fontScale + 'px';
 
-init();</script><script src=cordova.js></script><body><app></app><script type=text/javascript src=./static/js/manifest.d47c06cb4ce6d67cdc84.js></script><script type=text/javascript src=./static/js/vendor.45d6f77e38a8dd7e7c46.js></script><script type=text/javascript src=./static/js/app.cc59a9c3630398620493.js></script></body></html>
+    /**
+     * 用户有可能设置了系统字体，此时等比例反缩放 //todo
+     */
+    var appFontTester = document.getElementById('appFontTester')
+    var scale = appFontTester.offsetWidth / html.offsetWidth;
+
+    document.body.removeChild(appFontTester)
+    if( scale !== 1 ){
+      html.style.fontSize = parseFloat(window.fontScale) / scale + 'px';
+    }
+
+    // 阻止document页面滚动 (ios系统的webview的滚动)
+    document.addEventListener('touchmove', function(e) { e.preventDefault(); }, false);
+  }
+
+  init();</script><script src=cordova.js></script><app></app><script type=text/javascript src=./static/js/manifest.0cd70fe2bcdd4f246ed1.js></script><script type=text/javascript src=./static/js/vendor.512b0278d83a70c20160.js></script><script type=text/javascript src=./static/js/app.a9f9d253d6872b6d2413.js></script></body></html>
