--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
     document.addEventListener('touchmove', function(e) { e.preventDefault(); }, false);
 
     var params = window.location.href.split('?')[1]
-    var paramsArr = params ? params.split('&') : []
+    if (params) {
+      var paramsArr = params ? params.split('&') : []
 
-    for(var i = 0, length = paramsArr.length; i < length; i++){
-      var key = paramsArr[i].split('=')[0]
-      var value = paramsArr[i].split('=')[1]
-      window.sessionStorage.setItem(key, value)
+      for(var i = 0, length = paramsArr.length; i < length; i++){
+        var key = paramsArr[i].split('=')[0]
+        var value = paramsArr[i].split('=')[1]
+        window.sessionStorage.setItem(key, value)
+      }
+
+      window.location.href = window.location.href.split('?')[0]
     }
-
-    window.location.href = window.location.href.split('?')[0]
   }
 
 
