--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
      */
     var params = window.location.href.split('?')[1]
     if (params) {
+
       var paramsArr = params ? params.split('&') : []
 
       for(var i = 0, length = paramsArr.length; i < length; i++){
@@ -66,8 +67,7 @@
         var value = paramsArr[i].split('=')[1]
         window.sessionStorage.setItem(key, value)
       }
-
-      window.location.href = window.location.href.split('?')[0]
+      window.location.href = window.location.href.replace(/\?([^#])*#/, '#')
     }
   }
 
@@ -95,19 +95,18 @@
 //      //回老站授权
 //      window.location.href = window.location.origin + '/edu/index.html'
 //    }
-
     /**
      * 测试环境
      */
     if (window.sessionStorage.getItem('wxOauth2')) {
       //完成授权
-      if (window.sessionStorage.getItem('preUrl')) {
+      var url = window.sessionStorage.getItem('preUrl')
+      window.sessionStorage.removeItem('preUrl')
+      if (url) {
         //有保存的地址 进入该地址
-        window.location.href = window.sessionStorage.getItem('preUrl')
-      } else {
-        //无保存的地址 直接进入
-        init();
+        window.location.href = url
       }
+      init();
     } else {
       //未授权
       //保存当前地址
