--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!--以下为m站必须-->
   <!-- 微信js sdk -->
-  <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+  <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
 
 </head>
 
