--- a/static/ebooks/NobitaAdventure/index_split_000.html
+++ b/static/ebooks/NobitaAdventure/index_split_000.html
@@ -7,10 +7,213 @@
 <link href="page_styles.css" rel="stylesheet" type="text/css"/>
 </head>
   <body class="calibre">
-	<h1 id="id_Toc375387017" class="block_"><b class="calibre1">1<span class="calibre2">  </span></b><b class="calibre1">认识一个好老师</b></h1>
+	<h1 id="id_Toc375387017" class="block_"><b class="calibre1"><span class="calibre2">1  </span></b><b class="calibre1">认识一个好老师</b></h1>
 	<h2 id="id_Toc375387018" class="block_1">1.1导读</h2>
 	<p class="block_2">亲爱的小伙伴们，大雄股市历险记第一章新鲜出炉啦，本章包括五个小节，讲述了大雄为何萌发学习股票投资的念头，可是这个念头差点被曾经投资失败的爸爸妈妈扼杀在摇篮里。幸好神通广大的小叮当支持大雄，为大雄找了一个神秘的老师。大雄从神秘的老师那里了解了关于股票的基本概念，明白了买股票其实就是买入公司的一部分，还知道了为什么股票会上涨。老师还告诉大雄：其实买股票很简单，拿出我们在双十一买打折商品的一半精神，就可以找到又便宜又好的打折股票！</p>
 	<p class="block_3"> </p>
 	<p class="block_2">读完这一章的小伙伴，明白了股票的本质后，妈妈再也不用担心你会把自己辛辛苦苦积攒下来的存款盲目地用于买股票啦！</p>
-	<p id="id_Toc375387019" class="block_4"> </p>
+	<h3 id="toc_id_1" class="block_4">1.1.1 投资的想法被妈妈打击了</h3>
+	<p class="block_2">夏日漫长的午后，大雄抛下让自己无比头疼的家庭作业，在街上漫无目的地散步，突然听到街道拐角处传来小夫和胖虎的声音，小夫的声音听起来非常得意：“胖虎，你看这把小提琴，是我买给静香的生日礼物呢，是专门找大师定制的哦。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">胖虎的声音里则透露出一丝羡慕：“静香一定会很喜欢的，这把小提琴一定很贵吧，真羡慕你有这么多零用钱，我还不知道该送给静香什么呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">小夫得意地说：“其实我的零花钱也不够的，不过之前我把零花钱给爸爸，他帮我投资股票，最近股票涨了好多，所以我的零花钱翻了好几倍呢，除了够给静香买礼物，我还给自己买了一根最好的棒球棍呢。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“那我可以把零花钱给你，请你爸爸也帮忙买股票好吗？”胖虎急切地问。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“没问题，我爸爸眼光很准的。”小夫一口答应了。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">股票，零花钱翻倍，静香，生日礼物。。。大雄回家的路上，脑子里一直盘旋着这些词，想了半天，虽然他不明白小夫说的股票是怎么回事，不过他隐约觉得股票可以让零花钱变多，可以让自己买更多的漫画书，还可以给静香买她喜欢的东西，对！自己也要给静香买个很棒的生日礼物才行！</p>
+	<p class="block_3"> </p>
+	<p class="block_2">回到家，大雄就迫不及待地冲到楼上卧室，把睡得正香的小叮当推醒：“小叮当，你知道什么是股票吗？小夫的爸爸帮他买股票赚了好多钱，我也想买股票。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">小叮当睡眼惺忪的说：“买股票啊，你还没满18岁，不能自己买的，只能请爸爸妈妈代你买了。”大雄二话不说就冲下楼，爸爸正在看电视，大雄问：“爸爸，你帮我买股票好吗？小夫的爸爸买股票赚了好多钱，我们也可以啊。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">爸爸一听股票这个词，神情一下沮丧起来，正在厨房做饭的妈妈也突然冲出来说：“买股票？你最好离这个东西远远的，你爸爸就是之前买股票把我们家的存款亏了一大半的！股票是富人玩的游戏，我们这些普通家庭还是安安分分过自己的小日子好了，听着，从今以后我不想在我们家听到股票这个词！”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄垂头丧气地回到楼上，小叮当一副早知道会发生这样的事情的表情：“哈哈，被骂了吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“你怎么不早说？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“你跑得那么快，我来得及说吗？上星期有一天我听到妈妈骂爸爸，好像是爸爸瞒着妈妈把家里的存款拿了一些去炒股票，可是爸爸买的股票跌了很多，爸爸怕全部亏完，只好卖掉，结果亏了好多钱，只好跟妈妈说实话，把妈妈气坏了。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“可是为什么小夫的爸爸就能通过股票赚钱呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“这个我可不知道，你还是自己去问问爸爸吧。”小叮当的话刚说完，爸爸就走进了房间。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“爸爸，妈妈说的是真的吗？”大雄问道。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">爸爸叹了口气：“是啊，我的几个同事买股票赚了好些钱，他们说最近科技股大热，一定会涨的，我想如果可以赚点钱也可以给你妈妈一个惊喜嘛。谁知道我买的几只股票不仅没涨，反而还跌得厉害，我怕把本钱全部亏完，只好把那些股票全卖掉了。你还是个小孩子，大人都搞不懂的事情，你还是别跟着瞎折腾了，好好学习吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">爸爸离开了房间，却给大雄留下了一大堆疑问：股票究竟是什么？为什么有的人买股票赚了钱，有的人却会亏钱呢？他缠着小叮当不停地问，小叮当不耐烦了：“好了好了，看在你很少对一件事情这么感兴趣的份上我帮你找个老师吧，有什么问题你问他吧，他可是投资方面的大师哦，不过你得请我吃一周的铜锣烧才行。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“没问题！”大雄从没答应得这么爽快。</p>
+	<h3 id="toc_id_2" class="block_5"><b class="calibre1"><span class="calibre2">1.1.2  </span></b><b class="calibre1">新老师是个怪老头</b></h3>
+	<p class="block_2">小叮当拿出一个翻译机递给大雄：“先戴上这个吧，不然待会你一句话都听不懂就傻了。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“难道你给我找的这位老师是外国人？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">小叮当从口袋中拿出任意门：“少废话，跟我来吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">走出任意门，大雄发现自己在一间装修得很朴素的房间里，房间里有一张枣红色的书桌，桌子上放着很多文件和书籍，桌子前坐着一个头花花白的外国老头，房间里还放着一张小圆桌，小圆桌边上摆着两张椅子，估计是接待客人用的。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">这里和大雄想象的一点也不一样，既然是投资大师，肯定是赚了不少钱吧，他还以为会看到高级别墅、游泳池呢，就算不是这些，至少也应该是豪华的办公室吧。可是这里的一切根本没办法和成功的投资大师联系起来嘛，跟着这样的老师学习能行吗？</p>
+	<p class="block_3"> </p>
+	<p class="block_2">老头对小叮当和大雄的出现显得毫不意外，而且看起来和小叮当很熟的样子，招呼两人坐下，还给两人拿了两罐可口可乐。小叮当叽里呱啦和老头聊了一通，大雄一句话也没听懂，这才发现原来自己的翻译机没有开。他连忙打开翻译机，两人的对话已经结束了，小叮当说：“大雄，这就是我给你找的老师，他叫巴菲特，是个很有经验的投资高手哦，以后他会每周给你上一堂课的。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特，这个名字蛮熟的哦，好像在哪里听过，大雄半信半疑的看着眼前这个老头。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特好像看出大雄在想什么，他问大雄：“你为什么想学习投资股票呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“因为，因为我想自己有更多的零花钱啊。”大雄结结巴巴的说，显得有点不好意思。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特爽朗的笑道：“所有人投资的目的都是为了让自己的财富增值，这点没什么可害羞的，金钱对我们的生活来说确实是非常重要的，追求财富的增长是理所应当的事情。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">他停了一下，语气慢慢变得严肃起来：“不过太多人在投资的过程中对自己的金钱太不负责任了，就像你爸爸一样，根本没有对自己的投资对象有任何了解，只是盲目听信别人的话就把钱投资到股票上，亏损也是很正常的事情。大雄，你会游泳吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄没想到他会突然这么问，愣了一下：“会啊，学校开设了游泳课，请了专业的教练教我们游泳呢。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对啊，在没有学会游泳之前，我们绝不会贸然跳进一个很深的游泳池，因为我们知道一旦跳下去旁边又没有救生员的话，很有可能我们就小命不保了。投资同样是需要学习的，不掌握合理的方法和技能，不勤加练习，那后果就像不会游泳的人不戴游泳圈就直接跳进泳池一样可怕。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄听着巴菲特的话，觉得还挺有道理的。他突然觉得投资很像考试，事先准备得越充分，考试的分数就会越好；如果事先没有任何准备，就会死得很惨；如果没有任何准备还在考场上偷看别人的答案，结果就全看运气了，万一旁边坐的是个好学生，那就算走狗屎运了，可是万一旁边坐的人和自己一样，同样死得很惨。问题是，你能保证自己每次都有好运气吗？大雄从自己历次考试的经历总结出自己绝不是一个能凭着好运气抄到正确答案的人。考试考不好，最多被老师和妈妈臭骂一顿，可是投资失败呢，损失的可是自己全部的财富啊。想到这里，大雄决定还是踏踏实实跟着眼前这个怪老头学习吧。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特不知道大雄的小脑袋已经在短短的时间里高速运转，想了这么多东西了，他继续说：“因此，投资也需要学习，很高兴小叮当邀请我做你的老师。在未来的一段时间里，我会教你一些投资股票的基本知识，至少让我们在跳下泳池之前，先了解一些理论知识和基本技能吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄点点头，他开始期待这次不同寻常的学习之旅啦。</p>
+	<h3 id="id_Toc375387021" class="block_5"><b class="calibre1"><span class="calibre2">1.1.3  </span></b><b class="calibre1">股票是什么</b></h3>
+	<p class="block_2">简单的交流之后，大雄已经开始期待接下来的学习了，他迫不及待地问巴菲特：“那你会不会教我该买哪只股票呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特一听，哈哈大笑：“先别着急，你能先告诉我，股票是什么吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄没想到巴菲特会问他这个问题，他自言自语道：“股票是什么呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">他想了半天，犹豫着说：“股票不就是一种能让人赚钱也能让人亏钱的东西吗？如果像小夫的爸爸那样知道什么股票会上涨，就可以买下来等着赚钱，而像我爸爸一样买错了股票，就亏得一塌糊涂。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“大雄，如果你想买一本漫画书，你买之前会先了解一下这本书吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“当然了，我的零花钱不多，所以在买一本漫画书之前会先看看作者是不是我喜欢的，再大致了解一下内容，如果确实喜欢才会买，不然买来不喜欢多浪费啊。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对啊，我们买一本漫画书都要先了解一下，为什么很多人连股票都不知道是什么就敢把自己的积蓄放到股市中呢？要学会投资股票的知识和方法，首先得知道股票是什么吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄点点头。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特继续讲到：“股票其实不像大多数人想的那样，是一种看不见摸不着的交易品。我们就用你喜欢的漫画书来举例吧，如果一家卖漫画书的公司觉得漫画书市场潜力很大，想要在很多城市开设连锁店，那么它肯定需要很多钱，因为要开店就得租铺面、请更多的员工、还得花更多的钱进货，对吗？可是它自己没有这么多钱，怎么办呢？这家公司就可以通过上市发行股票的方式来筹措资金，假设这家公司把自己分成一百万份，每一份卖10元钱，这时大家都可以来买，你买了100份，也就是意味着你有100股这家公司的股票，更重要的是你拥有了这家公司的万分之一，而这家公司也就有了钱可以去实现自己的商业计划啦。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2"> “你的意思是说我买入这家公司的股票其实就相当于买进了一家公司的很小很小的一部分啰。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对！虽然是很小很小的一部分，但是你要知道，你也算是这家公司的主人之一了，也就是股东。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“股东？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对啊，股东就是指持有某个公司股份的人，也就是公司的拥有者之一。股东对于公司来说可是很重要的，正是因为有股东的存在，公司才能获得可以发展的资金。所以说虽然你只拥有这家公司的万分之一，但是你也是公司的股东之一。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“可是这个跟我们买股票有什么关系呢？”大雄疑惑的问。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“当然有关系啦，如果我们知道买股票其实本质是买入一家公司而不是买一样看不见摸不着的东西的话，在买入的时候就会不会那么盲目了。假如你有足够的钱可以买下一家公司的话，你会随随便便买一家公司吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“肯定不会啊，我会选一家能赚钱的公司。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对啊，每个人都会用同样的答案来回答这个问题，可是为什么当买入一家公司变成买入一家公司的一小部分的时候，人们就把自己的理性抛到脑后了呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“您的意思是说其实买股票就是在买公司，只是我们买入的是一家公司的一小部分，但是即便如此我们也该从买入一家公司的角度来思考问题，对吗？”大雄似乎有点明白巴菲特的意思了。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特赞许地说：“对！这是所有的投资者都应该牢牢记住的一点，股票并不神秘，买股票就是买公司，明白了吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄点点头：“明白啦！”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">#小测试#</p>
+	<p class="block_2">买入一家公司的股票之后，我们就成为这家公司的股东，这种说法对吗？</p>
+	<p class="block_2">A.对</p>
+	<p class="block_2">B.错误</p>
+	<h3 id="toc_id_3" class="block_5"><b class="calibre1"><span class="calibre2">1.1.4  </span></b><b class="calibre1">股票为什么会上涨</b></h3>
+	<p class="block_6">大雄在上次的学习中明白了很重要的一个道理：买股票其实就是买公司，拥有一家公司的股票就意味着拥有这家公司的一部分，股票根本就没那么神秘。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">一周的时间很短，很快又到了“巴菲特时间”（大雄在心里偷偷地给每周的学习时间取的名字）。巴菲特仍然用一个问题开始了今天的学习：“大雄，你为什么要买一家公司的股票呢？”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“因为我希望这家公司的股票能上涨啊，上涨了我就可以赚钱了。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“可是你凭什么认为一家公司的股票会上涨呢？”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“这个。。。这个。。。因为小叮当有时光机啊，我可以去未来看看哪些股票会上涨不就行了吗？”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">旁边坐着的小叮当正在专心享受自己的可乐，听到大雄的话差点呛着：“这是绝对不行的，如果这样做的话，我就会违反未来的法律，会被带回22世纪直接销毁的。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“既然如此，那好吧，小叮当说你是投资大师，你能告诉我下个月什么股票会上涨吗？”大雄看巴菲特的眼神中充满了希望。</p>
+	<p class="block_7"> </p>
+	<p class="block_2">巴菲特耸耸肩：“我没有时光机，我也不能预知未来，我不能告诉你哪家公司的股票会涨，哪家公司的股票会跌。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄很失望：“那你还算什么投资大师呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特哈哈大笑：“如果你想学预测股票的涨跌的话，那我还真没有那个能耐教你，而且估计这个世界上也没人能教你。因为从来没有人能做到正确的预测未来。不过我们还是先来了解一下一家公司的股票为什么会上涨吧。还是用之前那家卖漫画书的公司来打比方好吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄点点头。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“如果这家公司发行股票筹集到资金之后，在各个城市开的店生意都特别好，每年都能赚到不少钱，规模越来越大，还年年都要给你这样的股东分钱。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“为什么要给我分钱呢？”大雄好奇的打断巴菲特。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“因为你也是公司的主人之一啊，虽然你没有直接参与公司的经营，但是公司是用股东的钱来做生意的，所以赚了钱自然应该分给大家啊。你还记得当时这家公司的股票你买成多少钱吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“嗯，买成一股10元钱。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“那现在这家公司的股票肯定不止一股10元了对吧，因为公司的股价会随着公司的不断发展而慢慢上升。那你觉得像这样一家发展得很好而且愿意不断给股东分红的公司，其他人愿意买它的股票吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“嗯，肯定愿意啊。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“公司的股票只有100万份，可是想买的人很多，就好像小叮当爱吃的铜锣烧一样，如果有一家铜锣烧特别好吃，而且每天只卖100个，但是想买的人有1000个，这家铜锣烧就会涨价啊，愿意出高一点价格的人就能买到了。股票也是一样，所以股票的价格就会继续上涨了。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“那如果我现在把手头的100股卖出去，就可以赚钱啦。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对。那我再问你一个问题，你觉得一家公司的股票能一直无限制的上涨吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“这个，应该不会吧，就好像铜锣烧一样，就算很好吃，可是它最多也就值那么多钱啊，如果太贵了也没人买吧。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">巴菲特赞许的看着大雄：“你说到了一个很关键的问题，也就是公司的市值和内在价值的问题。不过今天的时间已经到了，我还有一个很重要的会议要开，这个话题就留着我们下次再讨论吧，好吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“公司的市值和内在价值？”大雄点点头，在心里打了一个大大的问号。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">#小测试#</p>
+	<p class="block_2">一家公司的股价会无限制的上涨吗？</p>
+	<p class="block_2">A.不会</p>
+	<p class="block_2">B.会</p>
+	<h3 id="toc_id_4" class="block_5"><b class="calibre1"><span class="calibre2">1.1.5  </span></b><b class="calibre1">买股票=买打折商品</b></h3>
+	<p class="block_6">上次学习结束的时候，巴菲特留了一个小小的悬念，一周以来大雄常常念叨这个问题，可是他才刚刚接触股票投资，脑子里除了巴菲特告诉他的那些知识之外还是一片空白，关于公司的市值和内在价值,究竟有什么秘密呢？</p>
+	<p class="block_7"> </p>
+	<p class="block_2">一周一次的学习如约开始了，大雄一见巴菲特就心急地问道：“巴菲特先生，我们能开始学习关于公司市值和内在价值的知识了吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“当然可以，上次我们说过一家铜锣烧很好吃而且每天只限量出售100个，那么它可能会比普通的铜锣烧卖得贵一些，但是如果它卖1万元一个，肯定也没有人买，对吧？因为大家会觉得太贵了，一个铜锣烧不可能值这个价钱的。每一样事物都有其内在价值，一家公司也是。那什么是市值呢？市值就是市场认为一家公司值多少钱。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“市场？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对，市场虽然看不见摸不着，但是它却对我们的投资有很重要的影响。有的时候它就像一个人一样喜怒无常。市场看一家公司就像妈妈看自己的儿子一样，高兴的时候会觉得自己的儿子是全世界最聪明最可爱最能干的人，有的时候又觉得自己的儿子是全世界最调皮捣蛋最没出息的那个人。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“您的意思是一家公司的市值在市场的影响下，可能会有很大的起伏？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“对”，巴菲特点点头，“从长期来看，一家公司的市值和内在价值是一致的，可是短期来看，公司的市值有可能会低于或者高于公司的内在价值。作为一个投资者，如果我们能在公司被市场低估的时候买入，就能找到一个很好的赚钱机会。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“我还是不太明白。”大雄有点疑惑。</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“其实买股票和我们买打折的衣服差不多，一件值100元的衣服，商家可能会因为种种原因进行打折销售，有时候打8折，有时候打5折，最低的时候可能是3折。如果我们以3折的价格买到了这件衣服，我们其实就省下了70元。一件公司的股价本来价值30元，可是因为某种原因市场先生觉得它只值15元，那我们这个时候买入，就相当于在这只股票打五折的时候买入了，等到它的市值和内在价值趋于一致，也就是30元的时候卖出，就赚了15元。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“可是我怎么知道一家公司的内在价值是多少呢？而且我怎么能知道这家被低估的公司会涨回去呢？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“这就是我可以教你的地方啦，我可以教你一些方法帮助你判断一家公司是否被低估了，还能教你分析一家公司好坏的方法。不过这可是一个漫长的学习过程，你有坚持下去的信心和决心吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄有些犹豫：“我很想学，可是之前我完全没有这方面的知识，而且老师和爸爸妈妈都常常说我笨，考试经常不及格，我能学会吗？”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">“当然能！”巴菲特毫不犹豫地回答，“投资并不是一件多复杂的事情，但是绝对需要长期的学习和实践，你看我都从事投资好几十年了，每天都还要看好几个小时的资料呢。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">大雄想起自从认识巴菲特以来，每次来他都在书桌前翻看厚厚的资料。人家都是投资大师了还在坚持学习，再想想自己，大雄还真有点惭愧。他看着巴菲特，点点头：“我想好了，我会认真跟您学习，一定会坚持下去的。”</p>
+	<p class="block_3"> </p>
+	<p class="block_2">#小测试#</p>
+	<p class="block_2">在投资的时候，我们需要分析的是：</p>
+	<p class="block_2">A.公司的市值</p>
+	<p class="block_2">B.别人愿意出多少钱买这家公司的股票</p>
+	<p class="block_2">C.公司的内在价值</p>
+	<p class="block_2">D.公司的股票下周会涨到多少钱</p>
+	<p class="block_8"> </p>
+	<p class="block_9"><b class="calibre1">拓展学习</b>：股票投资初级课第三课-公司的护城河分析。</p>
+	<p class="block_8"> </p>
+	<p class="block_10"><b class="calibre1">拓展阅读</b>：长投学堂免费课-变成有钱人的第一堂课第三课《投资的欲望》，讲了长投学堂创始人小熊的投资学习之路，看一个IT 男是如何通过自学投资逆袭的。</p>
+	<p id="id_Toc375387024" class="block_11"> </p>
 </body></html>
