--- a/static/ebooks/NobitaAdventure/index_split_005.html
+++ b/static/ebooks/NobitaAdventure/index_split_005.html
@@ -7,44 +7,176 @@
 <link href="page_styles.css" rel="stylesheet" type="text/css"/>
 </head>
   <body class="calibre">
-<h3 id="toc_id_5" class="block_7"><b class="calibre1">1.1.5<span class="calibre2">  </span></b><b class="calibre1">买股票=买打折商品</b></h3>
-	<p class="block_8">上次学习结束的时候，巴菲特留了一个小小的悬念，一周以来大雄常常念叨这个问题，可是他才刚刚接触股票投资，脑子里除了巴菲特告诉他的那些知识之外还是一片空白，关于公司的市值和内在价值,究竟有什么秘密呢？</p>
-	<p class="block_9"> </p>
-	<p class="block_6">一周一次的学习如约开始了，大雄一见巴菲特就心急地问道：“巴菲特先生，我们能开始学习关于公司市值和内在价值的知识了吗？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“当然可以，上次我们说过一家铜锣烧很好吃而且每天只限量出售100个，那么它可能会比普通的铜锣烧卖得贵一些，但是如果它卖1万元一个，肯定也没有人买，对吧？因为大家会觉得太贵了，一个铜锣烧不可能值这个价钱的。每一样事物都有其内在价值，一家公司也是。那什么是市值呢？市值就是市场认为一家公司值多少钱。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“市场？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“对，市场虽然看不见摸不着，但是它却对我们的投资有很重要的影响。有的时候它就像一个人一样喜怒无常。市场看一家公司就像妈妈看自己的儿子一样，高兴的时候会觉得自己的儿子是全世界最聪明最可爱最能干的人，有的时候又觉得自己的儿子是全世界最调皮捣蛋最没出息的那个人。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“您的意思是一家公司的市值在市场的影响下，可能会有很大的起伏？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“对”，巴菲特点点头，“从长期来看，一家公司的市值和内在价值是一致的，可是短期来看，公司的市值有可能会低于或者高于公司的内在价值。作为一个投资者，如果我们能在公司被市场低估的时候买入，就能找到一个很好的赚钱机会。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“我还是不太明白。”大雄有点疑惑。</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“其实买股票和我们买打折的衣服差不多，一件值100元的衣服，商家可能会因为种种原因进行打折销售，有时候打8折，有时候打5折，最低的时候可能是3折。如果我们以3折的价格买到了这件衣服，我们其实就省下了70元。一件公司的股价本来价值30元，可是因为某种原因市场先生觉得它只值15元，那我们这个时候买入，就相当于在这只股票打五折的时候买入了，等到它的市值和内在价值趋于一致，也就是30元的时候卖出，就赚了15元。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“可是我怎么知道一家公司的内在价值是多少呢？而且我怎么能知道这家被低估的公司会涨回去呢？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“这就是我可以教你的地方啦，我可以教你一些方法帮助你判断一家公司是否被低估了，还能教你分析一家公司好坏的方法。不过这可是一个漫长的学习过程，你有坚持下去的信心和决心吗？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">大雄有些犹豫：“我很想学，可是之前我完全没有这方面的知识，而且老师和爸爸妈妈都常常说我笨，考试经常不及格，我能学会吗？”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">“当然能！”巴菲特毫不犹豫地回答，“投资并不是一件多复杂的事情，但是绝对需要长期的学习和实践，你看我都从事投资好几十年了，每天都还要看好几个小时的资料呢。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">大雄想起自从认识巴菲特以来，每次来他都在书桌前翻看厚厚的资料。人家都是投资大师了还在坚持学习，再想想自己，大雄还真有点惭愧。他看着巴菲特，点点头：“我想好了，我会认真跟您学习，一定会坚持下去的。”</p>
-	<p class="block_3"> </p>
-	<p class="block_6">#小测试#</p>
-	<p class="block_6">在投资的时候，我们需要分析的是：</p>
-	<p class="block_6">A.公司的市值</p>
-	<p class="block_6">B.别人愿意出多少钱买这家公司的股票</p>
-	<p class="block_6">C.公司的内在价值</p>
-	<p class="block_6">D.公司的股票下周会涨到多少钱</p>
-	<p class="block_10"> </p>
-	<p class="block_11"><b class="calibre1">拓展学习</b>：股票投资初级课第三课-公司的护城河分析。</p>
-	<p class="block_10"> </p>
-	<p class="block_12"><b class="calibre1">拓展阅读</b>：长投学堂免费课-变成有钱人的第一堂课第三课《投资的欲望》，讲了长投学堂创始人小熊的投资学习之路，看一个IT 男是如何通过自学投资逆袭的。</p>
-	<p id="id_Toc375387024" class="block_13"> </p>
+<p class="block_12">6 投资的路才刚刚开始</p>
+	<p id="id_Toc375387056" class="block_1">6.1导读</p>
+	<p class="block_41">大雄和英才的年报学习之旅已经进行到尾声啦，学完了三表，巴菲特还会教他们什么呢？想知道为什么巴菲特为什么会爽快地答应小叮当成为大雄的老师吗？大雄和英才会怎样继续接下来的股票投资之路呢？在这一章，所有的谜底都将一一揭晓。</p>
+	<p class="block_25">在这一章，你将学到该如何将前面所学的三张表进行综合分析，了解公司经营的全面情况；你将看到大雄全家总动员一起分析公司的温馨场面；最最重要的当然是巴菲特和小叮当背后的故事，热爱八卦的读者们千万别错过呀！</p>
+	<p class="block_25">想要投资成功，没有捷径可走，这条路虽然很漫长，但是不断的学习、实践和分享会给付出过的人带来可观的回报，让我们一起上路吧！</p>
+	<p class="block_46">6.1.1巴菲特的考试</p>
+	<p class="block_27">时间在大雄和英才一周一次的学习中不知不觉就偷偷溜走了几个月，冬天悄悄的来了，巴菲特办公室的壁炉也升起了熊熊的炉火，大雄和英才一走进办公室，就感觉到一股浓浓的暖意。巴菲特坐在壁炉边的椅子上，招呼两个学生赶紧先暖和一下。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄和英才坐在壁炉前的地毯上，巴菲特递给两人薄薄的两本资料：“咱们的学习已经进行了一段时间了，年报中最重要的三表想必你们都已经掌握得不错啦，今天我们就来做一个小小的随堂测验，资料上是一家公司的简单介绍和十年的三表资料，给你们40分钟的时间，然后告诉我你们通过这些资料了解到公司的哪些信息。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">两个学生顿时紧张起来，拿起资料专注的看起来，还不时用纸笔进行一些计算，忙的不亦乐乎，巴菲特端着咖啡，在旁边惬意地享受着难得的悠闲时光。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">40分钟过去了，巴菲特看看表：“OK，考试结束，谁先开始？”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄急忙说：“我先来吧。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这是一家从事服装生产的企业，我利用综合损益表的数据计算了一下公司的毛利率，发现公司历年的毛利率都是比较稳定的，而且还有上升，这是个好的现象，说明公司的盈利能力相对比较稳定；另外公司基本上没有什么负债，说明这家公司没欠多少钱，财务比较安全，不会在短时间内就面临破产的危险；最后我还看了公司的现金流量表，发现公司每年的投资金额都比较稳定，说明公司没有盲目扩张。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">巴菲特边听边点头：“说得不错，看来大雄对于三表掌握得很熟练了。英才，该你啦！”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">英才看起来胸有成竹：“我觉得大雄说得很好，不过我觉得如果把几张表综合起来分析就会得到更多有用的信息。就拿这家服装公司来说，我除了看它的毛利率和净利润之外，还看了每年的存货和应收账款，发现近两年公司的存货有较大的上升，说明公司可能在销售上或者管理上遇到了一些问题，这个问题在现金流量表中的经营活动现金流净额中也得到了验证，公司这两年的经营活动现金流净额确实有所降低。因此这家公司虽然如大雄所说财务很安全、盈利能力也比较稳定，没有盲目扩张，不过近两年的销售似乎没有之前好，具体的原因还得我们继续去从年报或者其它方面找一些公司的资料。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">巴菲特给了英才赞赏的掌声：“非常棒！能够把三张表综合起来分析，而不是孤立地看待三张表，正是我这次考试的重要目的呢。看来英才的综合能力还有分析能力都很不错，大雄还得向英才好好学习呢。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄心悦诚服的点点头，听完英才的分析，他才知道自己虽然掌握了三表，但是分析得还远远不够深入。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">巴菲特接着说道：“企业的三表是从不同的侧面来描述企业的情况，我们在分析的时候要将三张表综合起来分析，找出数据背后隐藏的秘密，才能全面地了解一家公司的情况。不过要记住，数据只能描述公司的情况，但是公司为什么会这样，为什么会发生这样或者那样的变化，数据是不能告诉我们答案的，只有靠着数据给我们提供的线索，通过各种途径寻找公司的资料，才能找出背后隐藏的秘密。还记得在学习一开始的时候，我就说过分析公司其实就和侦探破案一样，要仔细观察，深入分析，不要放过一点蛛丝马迹，这样我们才能了解一家公司，做出正确的投资决策啊！”</p>
+	<p class="block_8"> </p>
+	<p class="block_47"><span class="text_"> <span class="calibre2">   </span></span><span class="text_1">#温馨小提示#</span></p>
+	<p class="block_27">三张表反映的是企业经营情况的不同侧面，小伙伴们在分析公司的时候一定要综合三张表提供的信息来进行判断哦！千万别被某些假象迷惑，真相往往来自于不懈的探索！</p>
+	<p class="block_8"> </p>
+	<p class="block_9"><b class="calibre1">拓展学习</b>：初级第一课 公司分析的基础 年报三表(下)综合三张表提供的信息来进行判断01/02-衡量公司的各种工具</p>
+	<p class="block_46">6.1.2爱上读年报</p>
+	<p class="block_27">上一次的学习结束之后，巴菲特告诉大雄和英才，他已经将关于三表的知识教得差不多了，但是最关键的是将学到的这些知识用起来，只有在不断的阅读、分析的情况下，才能积累更多的经验，用更短的时间分析一家公司，发现这家公司是不是值得投资。因此巴菲特希望大雄和英才能在平时上课之余多花一些时间看看各种类型公司的年报，不然学到的知识很快就会忘记的。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">回家之后，大雄照例给爸爸妈妈讲了学习的情况，自从妈妈改变了对大雄学习投资的态度之后，大雄已经把事情原原本本都告诉了妈妈，并且每次学习结束之后都会跟爸爸妈妈分享学习到的知识。原本周末晚上一家人总是习惯性的坐在沙发上看电视，现在却围坐在餐桌旁和大雄一起学习三表的知识，气氛反而更好了。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">别看妈妈之前强烈反对大雄学习投资，可是现在学习的热情可是相当高，也许是家庭主妇多年持家的经验起了作用吧，妈妈居然很快就接受了巴菲特的投资理念：找到好公司并且以便宜的价格买下来。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">最初听完大雄的介绍后，妈妈说：“这不就和我平时买东西喜欢买价廉物美的一样嘛，你得知道这件东西是不是好东西，平时卖多少钱，如果确实是好东西而且现在价格比平时便宜很多的话那我肯定会毫不犹豫地买下来啊。原来买股票也是一样的道理啊，这可是我擅长的事情。”果然，在接下来的学习中，妈妈的表现比爸爸还好。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">听完巴菲特对于年报阅读的建议之后，爸爸妈妈都异口同声的表示赞成，觉得阅读年报、分析公司是一件很有价值的事情，“在这个过程中，我们还有机会发现一些值得投资的好公司呢。”爸爸眉飞色舞的说道。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">看到爸爸妈妈那么支持，大雄趁热打铁把自己在路上已经想好的方案提了出来：“你们看这样行吗？咱们把每周五和周六的晚上定为公司分析日，每周分析一家公司，因为我们要看一家公司好几年的年报呢，以现在的速度一晚上的时间是肯定看不完的，两个晚上的时间比较合适。至于要分析什么公司呢，我觉得可以大家轮流提出，只要是感兴趣的上市公司，都可以提出来呀！”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">爸爸妈妈点头表示赞同，不过妈妈的一个问题让大雄愣住了：“你的老师说要找又好又便宜的公司，是不是好公司现在我们可以通过分析公司得出结论，可是这家公司便宜不便宜可怎么判断呢？”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这个…这个…老师还没教呢，下次我问问他吧。”大雄想了半天，好像巴菲特真的没教过这个。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“哎呀，孩子妈，这个问题问我就行了嘛，这段时间我还是自学了不少知识的，一般来说，判断公司是不是便宜的最基本指标是市盈率，也就是公司市值/公司上一年的净利润，如果市盈率越低的话，说明这家公司可能很便宜，不过单独靠这个指标可不好使，现在加上巴菲特教的方法，我们就能找到既便宜又好的公司啦。”爸爸得意的展示自己的学习成果。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">妈妈瞪了爸爸一眼：“你可别得意，还记得你上次投资失败的教训吗，那可真是血淋淋的啊，还不是因为什么都不懂，现在你多学习一些也是应该的！”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄赶紧打圆场：“那咱们就这样决定了，好吗？”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“好，不过我还有一个问题一直没想明白，你说那个巴菲特是什么世界知名的投资大师，还当过世界首富，为什么他会愿意教你和英才两个小孩子呢？你说叮当看起来和他很熟，可是叮当从未来到这个世界之后一直在咱们家啊，他们是怎么认识的呢？”爸爸问道。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄还从没想过这个问题呢，爸爸一问，他也觉得开始好奇了，究竟巴菲特和小叮当是什么关系呢？</p>
+	<p class="block_46">6.1.3最后一课：学会独立思考</p>
+	<p class="block_27">圣诞节快到了，大雄和英才为巴菲特精心准备了圣诞礼物，大雄为巴菲特带来一件妈妈亲手织的毛衣，上面有一颗美丽的圣诞树。英才则为巴菲特准备了一件很有日本特色的礼物——一副美丽的油画，画上美丽的樱花静静的绽放，远远的地方是纯洁的富士山。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">办公室已经有浓浓的圣诞气氛了，门口和玻璃窗上都被布置得热热闹闹，巴菲特也给两个孩子准备了圣诞礼物，大雄和英才拆开一看，是一大盒各式各样的喜诗糖果。巴菲特说：“喜诗糖果是我投资过的公司中非常伟大的一家，多年来它给我带来源源不断的回报，让我感受到投资一家好公司的快乐，我也希望能和你们一起分享这种快乐。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">三个人坐在壁炉前，边吃糖果边聊天，大雄问：“我能问一个问题吗？这个问题可能有点傻。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“当然可以啦，无论在别人看来多傻的问题，只要你觉得自己需要知道答案的，就大胆的去问吧，要知道，成功的人都是很会问问题的呢。”巴菲特鼓励大雄。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“我想问的是，你觉得投资过程中最重要的一件事是什么？”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这是个很棒的问题，让我想想。这么多年来，我也一直在想什么是投资成功的最重要的因素，一定不是知识，因为只要是智商正常的人都可以通过各种方式获得知识。也不是方法，你们学习了这么久，也知道方法是很简单也很容易掌握的。后来我发现，我忽略了非常重要的一点。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“是什么？”大雄和英才异口同声的问道。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“是独立思考的能力和坚持独立思考的勇气。”巴菲特意味深长的说。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“为什么？独立思考是一件很难的事情吗？”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“当然，独立思考绝不是一件容易的事情，尤其是在外界有很多质疑的时候。有一个很经典的实验，心理学家把6个人放在实验室里，让他们比较两条线段的长短，实际上A线段明显比B线段长，可是这6个人里面有5个都是和心理学家串通好了的，他们异口同声的说B线段要长一些。几次之后，剩下的这个人也不得不说出和大家一样的答案。这个实验虽然发生在很多年以前，但是人性是不会改变的，在很多情况下我们还是不能坚持自己的思考，反而会跟从周围的人。想想看，如果你想投资一家公司，但是你的家人、朋友甚至是更多的人都反对你，认为你这样做会大错特错，会损失一大笔钱，电视里、网上都有大量的信息告诉你这家公司不能投资，投资者们正在纷纷逃离这家公司，这个时候，尽管你认为自己的判断是正确的，你还能坚持吗？万一你的判断真的是错的呢？”巴菲特一连问了好几个问题。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄和英才听了这段话，都陷入了深深的思考。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这是一个信息过剩的年代，我们不是没有足够的信息，而是有太多的信息，以至于我们不知道该信谁的，这个时候，独立思考就显得格外重要。我们需要利用这些信息来分析判断，找到合适的公司，也许这家公司不是别人看好的，甚至是很多人反对的，但是我们需要坚持自己的判断。”巴菲特接着说。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“那如果错了怎么办呢？”英才犹豫地说。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“哈哈，没有不犯错的人，我在投资上也犯了很多错误，重要的不是犯错，而是从错误中学习，进而少犯一些错误。如果想要不犯错的话，那就根本没有必要学投资啦，直接把钱放进银行，那就永远不会犯错了！不过这些都还需要你们在自己的投资实践中慢慢去学习和体会才行呢。”巴菲特爽朗的笑了。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">大雄和英才似懂非懂地点点头。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“那这就是最后一次正式的学习啦，不过以后有什么问题你们还是可以随时来找我。”</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这么快？好舍不得。”大雄有点难过，每周的学习现在已经变成他最快乐的时光之一了。</p>
+	<p class="block_28"> </p>
+	<p class="block_27">“这才是你们学习的起点呢，投资的路是需要一直不断学习的，我已经把基础的知识和方法教给你们啦，剩下的都得靠你们自己不断实践、学习和总结才行。”巴菲特难得那么语重心长。</p>
+	<p class="block_46">6.1.4原来如此！</p>
+	<p class="block_48"><span class="text_2">大雄和英才终于结束了正式的年报学习之旅，以后不用再每周都定时上课啦。但是师生三人商定以后每个月至少都要见一次面，时间就定在每个月的最后一个周六，巴菲特把这个约定取名为</span><span class="text_3">“</span><span class="text_2">相约星期六</span><span class="text_3">”</span><span class="text_2">。在这段时间内，大雄和英才可以和巴菲特分享这个月的学习、投资的体会，也可以向他请教投资方面的各种问题，这样大雄和英才的学习就不用担心没有老师啦！</span></p>
+	<p class="block_28"> </p>
+	<p class="block_48"><span class="text_2">商量好之后，大雄犹豫的问巴菲特：“我能问你一个问题吗？</span><span class="text_3">”</span></p>
+	<p class="block_28"> </p>
+	<p class="block_49"><span class="text_3">“</span><span class="text_2">当然！</span><span class="text_3">”</span><span class="text_2">巴菲特点点头。</span></p>
+	<p class="block_7"> </p>
+	<p class="block_49"><span class="text_3">“</span><span class="text_2">其实这个问题不是关于年报或者公司分析的问题，你还记得第一次小叮当带我来的情景吗？你看起来和他很熟的样子，当时我就觉得很奇怪，因为他到我家之后就一直没有离开过，而且从来没跟家里人提过他在美国居然还认识什么世界首富，你们是怎么认识的呢？</span><span class="text_3">”大雄终于还是忍不住问了这个一直在心里纠结了很久的问题。</span></p>
+	<p class="block_7"> </p>
+	<p class="block_50">“哈哈，我还以为你早就会问这个问题呢！”巴菲特笑得很开心。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“那可以告诉我这背后的故事吗？”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“当然可以，虽然这么多年我还从来没告诉过其他人呢。”巴菲特想了想，似乎是在整理自己的思绪。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“这件事情说来话长，是很久很久以前的事情了。你知道其实全世界各地其实都有机器猫吗？而且他们互相之间还是好朋友呢。”</p>
+	<p class="block_50"><br class="calibre5"/><span class="calibre2">    “</span>这个我知道，听小叮当说过，他们有一个七人小组，分布在不同的国家，不过我还没见过他的朋友呢。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“这个事情就和住在美国的基德有关，因为他是小叮当妹妹的男朋友，所以小叮当经常来美国和他们一起玩，有一次他们在偶然之间帮助了一个奥马哈的青年，从那时开始他们就成为了朋友，是那种不常聚会但是彼此把对方放在心里的朋友。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“那个青年就是你吗？”英才好奇的问。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“你说呢？”巴菲特笑着反问道。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“那小叮当他们究竟帮了你什么忙呢？”大雄已经迫不及待想要知道背后的故事了。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“这个的话，你还是回去问小叮当吧。”巴菲特狡黠地笑着，把这个问题抛给了小叮当。不管大雄和英才怎么问，他都坚决不多说一个字了。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">回到家，小叮当正忙着呼呼大睡，大雄哪里有耐心等他睡醒，打开橱柜把小叮当摇醒：“小叮当，快给我们讲讲当年你们帮助巴菲特的故事吧。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">小叮当迷迷糊糊的：“巴菲特？你们的课上完啦。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“哎呀，赶紧清醒一下，我是想知道你在美国和基德他们帮助巴菲特的故事！”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“哦，是这个啊！”小叮当总算清醒了一些。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“其实也没什么，我们是在汉堡店偶然遇见的，要知道基德也和巴菲特一样很喜欢吃汉堡。那时候他喜欢一个女孩，可是女孩子觉得他性格内向呆板，不愿意理他，我们就送他两颗神奇药丸咯，一颗是勇气，一颗是幽默。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“后来呢？”英才追问道。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“后来啊，他如愿以偿，娶到了他喜欢的女孩嘛。”</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“神奇药丸这么有效啊，有关于投资的吗，给我一颗呗，吃完之后我也可以成为投资大师。”大雄对神奇药丸很感兴趣。</p>
+	<p class="block_7"> </p>
+	<p class="block_50">“想得美！其实巴菲特自己都不知道，神奇药丸的效果只能持续一周，后来他能娶到自己心爱的女孩，完全是靠自己的努力。人很多时候其实都不相信自己有某方面的能力，特别想依靠外来的力量，其实自己就可以做到的，只要迈出第一步就没那么难啦，我们就只是帮他迈出了第一步而已。所以你也别妄想什么神奇药丸啦，还是自己好好学习吧！”</p>
+	<p class="block_46">6.1.5坚定信念向前走！</p>
+	<p class="block_39">听完巴菲特的故事，大雄和英才觉得很好玩：原来世界知名的投资大师也有看到女孩子害羞的时候呢！两个人一边讨论，一边走在去棒球场的路上，打算打一场棒球活动活动筋骨。刚刚走到棒球场边，就听到小夫的惨叫：“别打了，别打了，我拿我自己的钱赔给你不就行了吗？大雄和英才往前一看，是胖虎正追着小夫满场跑呢！</p>
+	<p class="block_40"> </p>
+	<p class="block_39">英才赶紧上去劝架，胖虎看到大雄和英才，只好停下来。小夫更是像看到救星一样赶紧躲到两人身后。大雄不太想插手小夫和胖虎的事，他还对之前的嘲笑和欺负记忆犹新呢，不过既然英才都去劝架了，他也不好说什么。他站在一边，看着躲在身后的小夫，没有说话。</p>
+	<p class="block_40"> </p>
+	<p class="block_39">看到胖虎和小夫总算停了下来，英才问道：“究竟发生什么事情了？”</p>
+	<p class="block_40"> </p>
+	<p class="block_39">胖虎正等着跟别人倾述他的愤怒呢：“气死我了，我把我的零花钱都拿给小夫的爸爸帮我投资股票了，可是他今天居然跟我说他爸爸买的股票大跌，钱都亏了快一半了！你这个骗子，赶紧把我的钱还给我！”说着说着胖虎又要动手了。</p>
+	<p class="block_40"> </p>
+	<p class="block_6">“别激动，听听小夫怎么说。”英才赶紧拦住他。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“我怎么知道怎么回事，这次的内幕消息还是一家公司的高层偷偷告诉他的呢，说是政府会大力扶持节能环保行业，有几家公司的股票一定会涨的，之前这个叔叔的消息都很灵的，结果爸爸买了之后，股票是涨了几天，可是没涨多少就一直往下跌，还好爸爸只拿了家里的一部分钱去买股票，不然我们家这次就亏大了。胖虎，最多我就拿我自己的零花钱还给你不就行了嘛，之前赚钱的时候怎么没见你说什么。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“我不是早就告诉你听内幕消息是靠不住的吗？你怎么不劝劝你爸爸呢？”大雄终于忍不住说话了。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“你懂什么？股票亏钱是很正常的事情，你怎么不说我爸爸之前还赚了很多呢。不听内幕消息，那你怎么买股票？”小夫鄙视地看着大雄。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“小夫，你怎么能这么说话呢！大雄也是好心在劝你，要知道买股票不是那么简单的事情，内幕消息什么的太靠不住了，你怎么知道那些所谓的内幕消息有多少是真的，多少是假的，这不是纯粹靠运气吗？这样的话风险太大了，这次的事情难道还没让你和你爸爸吸取教训吗？”连英才都觉得小夫太过分了。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“连英才都帮大雄说话了，难道你也相信大雄的老师说的话？我倒要看看，就靠你们自己怎么靠买股票赚钱，真是可笑！算了，看在你们今天帮我的份上，我就不打击你们啦！”说完这句话，小夫趁着胖虎没注意，赶紧跑了。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">胖虎气呼呼地回家了，留下英才和大雄无奈地站在棒球场上，大雄问英才：“你相信所谓的什么内幕消息吗？”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“当然不信，我相信做好任何事情的前提是努力的学习和这件事情有关的知识，然后加以练习，这样才有可能做好。你知道为什么我每次考试都考得很好吗？不是因为我聪明，而是因为我会提前花很多时间来准备考试，我从来不指望运气，也许运气可以帮我一次甚至几次，可是总不能帮我一辈子吧。投资股票这件事也是一样的，如果没搞懂我宁愿离它远远的，也不愿意靠别人告诉我该怎么做。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">大雄点点头：“嗯，你说的太对了！虽然小夫不愿意听我们的建议，但是我们自己还是要坚持我们的想法。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“对！来，我们开始打球吧！”英才开心地建议。</p>
+	<p class="block_7"> </p>
+	<p class="block_6">“好啊。”</p>
+	<p class="block_7"> </p>
+	<p class="block_6">两个人飞快地向球场中央跑去，球场上一下热闹起来。远处的天边，夕阳给云彩穿上了金色的外衣，小鸟在球场边的树上叽叽喳喳的唱歌，美好的一天快要结束了，不过明天也许会更精彩呢！</p>
+
 </body></html>
