--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
 <div id="appFontTester" style="width: 18.75rem;height: 1px"></div>
+
 <script>
 
   /**
@@ -122,7 +123,13 @@
 <script type="text/javascript" src="cordova.js"></script>
 
 <!--电子书阅读器-->
+<script src="./static/ebooks/lib/zip.min.js"></script>
+<script src="./static/ebooks/lib/jszip.js"></script>
 <script src="./static/ebooks/lib/epub.min.js"></script>
+
+<script>
+  window.EPUBJS.filePath = "../reader/js/libs/";
+</script>
 <app></app>
 <!-- built files will be auto injected -->
 </body>
