--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <script src="./static/ebooks/lib/epub.min.js"></script>
 
 <script>
-  window.EPUBJS.filePath = "../reader/js/libs/";
+  window.EPUBJS.filePath = "./static/ebooks/";
 </script>
 <app></app>
 <!-- built files will be auto injected -->
