--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' gap://ready file://* * ; font-src *  data:;img-src data: *; style-src 'self' https://* 'unsafe-inline'; script-src 'self' http://* https://* 'unsafe-inline' 'unsafe-eval'">
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' gap://ready file://* blob: * ; font-src *  data:;img-src data: blob: *; style-src 'self' https://* 'unsafe-inline' blob: ; script-src 'self' http://* https://* 'unsafe-inline' 'unsafe-eval' blob: ">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -123,12 +123,12 @@
 <script type="text/javascript" src="cordova.js"></script>
 
 <!--电子书阅读器-->
-<script src="./static/ebooks/lib/zip.min.js"></script>
+<!--<script src="./static/ebooks/lib/zip.min.js"></script>-->
 <script src="./static/ebooks/lib/jszip.js"></script>
 <script src="./static/ebooks/lib/epub.min.js"></script>
 
 <script>
-  window.EPUBJS.filePath = "./static/ebooks/";
+  window.EPUBJS.cssPath = "./static/ebooks/css";
 </script>
 <app></app>
 <!-- built files will be auto injected -->
